# arena-shooter

./: package.json  pnpm-lock.yaml  todo.md  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: KillFeed.tsx  SacredGeometryBg.tsx  SettingsModal.tsx  WeaponSelector.tsx
client/src/game/: Game.tsx  GameLoop.ts  GameRenderer.ts  InputManager.ts  useGameSocket.ts
client/src/pages/: EndGame.tsx  Home.tsx  MainMenu.tsx
drizzle/meta/: 0000_snapshot.json  _journal.json
server/_core/: index.ts
server/game/: game.test.ts  matchmaker.ts  physics.ts  session.ts  wsServer.ts
shared/: game.ts
simulation/: CMakeLists.txt  README.md  life_sim_linux
simulation/src/: Genome.h  Organism.cpp  Organism.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  World.cpp  World.h  main.cpp  test_headless.cpp
